fix chat option wrapping bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,8 @@ a {
 
 	max-width: 100vw;
 
-	top: 0;
-	left: 0;
+	top: calc(50% - 10rem);
+	left: calc(50% - 15rem);
 	width: 30rem;
 	height: 20rem;
 	display: flex;
@@ -480,6 +480,7 @@ a {
 
 	font: inherit;
 	line-height: normal;
+	white-space: nowrap;
 }
 
 .chat-option:hover {
